prikaz svih artikala i korisnika

--- a/Devcic-7/src/hr/java/vjezbe/javafx/pocetniEkran.fxml
+++ b/Devcic-7/src/hr/java/vjezbe/javafx/pocetniEkran.fxml
@@ -7,11 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane prefHeight="500.0" prefWidth="400.0"
-	xmlns:fx="http://javafx.com/fxml/1"
-	xmlns="http://javafx.com/javafx/11.0.1"
-	fx:controller="hr.java.vjezbe.javafx.PocetniEkranController">
+<BorderPane prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.java.vjezbe.javafx.PocetniEkranController">
 	<top>
 		<MenuBar BorderPane.alignment="CENTER">
 			<menus>
@@ -19,31 +15,31 @@
 					<items>
 						<Menu mnemonicParsing="false" text="Automobil">
 							<items>
-								<MenuItem mnemonicParsing="false" text="Pretraga" />
+								<MenuItem mnemonicParsing="false" onAction="#prikaziEkranZaPretraguAutomobila" text="Pretraga" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="false" text="Stan">
 							<items>
-								<MenuItem mnemonicParsing="false" text="Pretraga" />
+								<MenuItem mnemonicParsing="false" onAction="#prikaziEkranZaPretraguStanova" text="Pretraga" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="false" text="Usluga">
 							<items>
-								<MenuItem mnemonicParsing="false" text="Pretraga" />
+								<MenuItem mnemonicParsing="false" onAction="#prikaziEkranZaPretraguUsluga" text="Pretraga" />
 							</items>
 						</Menu>
 					</items>
 				</Menu>
 				<Menu mnemonicParsing="false" text="Korisnici">
 					<items>
-						<Menu mnemonicParsing="false" text="Privatni korisnik">
+						<Menu mnemonicParsing="false" onAction="#prikaziEkranZaPretraguPrivatnihKorisnika" text="Privatni korisnik">
 							<items>
 								<MenuItem mnemonicParsing="false" text="Pretraga" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="false" text="Poslovni korisnik">
 							<items>
-								<MenuItem mnemonicParsing="false" text="Pretraga" />
+								<MenuItem mnemonicParsing="false" onAction="#prikaziEkranZaPretraguPoslovnihKorisnika" text="Pretraga" />
 							</items>
 						</Menu>
 					</items>
@@ -52,9 +48,7 @@
 		</MenuBar>
 	</top>
 	<center>
-		<ImageView fitHeight="250.0" fitWidth="400.0"
-			pickOnBounds="true" preserveRatio="true"
-			BorderPane.alignment="CENTER">
+		<ImageView fitHeight="250.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
 			<image>
 				<Image url="@oglas.jpeg" />
 			</image>
